<resources>
    <string name="app_name">َAndroid Simple View</string>
    <string name="editProfile">Edit Profile</string>
    <string name="viewWebsite">View Website</string>
    <string name="done">Done</string>
    <string name="skills">Skills</string>
    <string name="androidDevelopment">Android Development</string>
    <string name="uiDesign">Ui Design</string>
    <string name="deepLearning">Deep Learning</string>
    <string name="provinceCity">Province, City</string>
    <string name="gilanRasht">Gilan,Rasht</string>
    <string name="tehranTehran">Tehran,Tehran</string>
    <string name="alborzKaraj">Alborz, Karaj</string>
    <string name="saveInformation">Save Information</string>
    <string name="editTextHint">Enter Your FullName : </string>
</resources>