<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/id_textView_main_appName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FFFFFF"
        android:elevation="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="16dp"
         />
    <Button
        android:id="@+id/id_Button_main_SaveInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_primary"
        android:text="@string/saveInformation"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/id_Button_main_SaveInformation"
        android:layout_below="@id/id_textView_main_appName"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_icon" />

            <TextView
                android:id="@+id/id_textView_main_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="Javad Chaji" />

            <Button
                android:id="@+id/id_button_main_EditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_button_primary"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/editProfile"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/id_button_main_ViewWebsit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_textView_main_fullname" />

            <Button
                android:id="@+id/id_button_main_ViewWebsit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/background_button_secondary"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/viewWebsite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/id_button_main_EditProfile"
                app:layout_constraintTop_toTopOf="@+id/id_button_main_EditProfile" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/id_button_main_EditProfile" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <CheckBox
                android:id="@+id/id_checkBox_main_Android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/androidDevelopment"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <CheckBox
                android:id="@+id/id_checkBox_main_Ui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uiDesign"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/id_checkBox_main_Android" />

            <CheckBox
                android:id="@+id/id_checkBox_main_deep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deepLearning"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/id_checkBox_main_Ui" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/provinceCity"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/id_checkBox_main_deep" />

            <RadioGroup
                android:id="@+id/id_radioGroup_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView4" >

                <RadioButton
                    android:id="@+id/id_radioButton_main_Tehran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tehranTehran" />

                <RadioButton
                    android:id="@+id/id_radioButton_main_Gilan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gilanRasht" />

                <RadioButton
                    android:id="@+id/id_radioButton_main_Alborz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alborzKaraj" />
            </RadioGroup>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</RelativeLayout>